--- a/src/components/SideMenu/SideMenu.scss
+++ b/src/components/SideMenu/SideMenu.scss
@@ -75,7 +75,7 @@
         }
 
         &.select {
-            color: #ff9933!important;
+            color: #ff9933 !important;
             font-size: larger;
         }
     }
@@ -131,7 +131,6 @@
         margin-bottom: 7px;
         position: relative;
 
-
         z-index: 1;
 
         transform-origin: 7px -2px;
@@ -153,7 +152,7 @@
         opacity: 1;
 
         transform: rotate(45deg) translate(-2px, -1px);
-        background: #fff!important;
+        background: #fff !important;
     }
 
     #side-menu-toggle input:checked ~ span:nth-last-child(3) {
@@ -174,9 +173,10 @@
         position: fixed;
         display: flex;
         flex-direction: column;
+        overflow-y: scroll;
         right: 0;
         height: 100%;
-        
+
         margin-left: -475px;
         box-sizing: border-box;
         top: 0;
@@ -199,7 +199,7 @@
         .list {
             transition: all 0.2s;
 
-            &>li {
+            & > li {
                 max-height: 60px;
                 color: white;
                 font-size: 20px;
@@ -317,6 +317,9 @@
     }
     .ko-font {
         font-family: $secondary-font;
+    }
+    .title-list {
+        min-height: 553px;
     }
 }
 
@@ -577,5 +580,32 @@
         &-change-lang-wrapper {
             top: 10px;
         }
+    }
+}
+
+.maxius-logo {
+    display: block;
+    position: fixed;
+    top: 50px;
+    left: 100px;
+    z-index: 1;
+    @media (max-width: 1024px) {
+        left: 60px;
+    }
+    @media (max-width: 780px) {
+        left: 50px;
+    }
+    a {
+        text-decoration: none;
+        color: inherit;
+
+        font-family: 'Roboto';
+
+        line-height: 24px;
+        font-weight: 600;
+        font-size: 21px;
+
+        font-size: 21px;
+        text-transform: uppercase;
     }
 }
