--- a/src/components/Pages/Contact/contact.scss
+++ b/src/components/Pages/Contact/contact.scss
@@ -7,36 +7,44 @@
         text-align: center;
         padding: 60px 0;
         animation: fade 1s ease;
+        font-family: "Montserrat", sans-serif;
     }
     .wrap_content {
         display: flex;
         .map {
+            height: 100vh;
             background-color: #ccc;
-            width: 50vw;
-            height: calc(100vh - 185px);
-            overflow: hidden;
+            width: 50%;
+            // overflow: hidden;
+            iframe {
+                width: 100%;
+                height: 100vh;
+            }
         }
         .address {
-            background-color: #222;
+            background-color: #1d1d1d;
             width: 50vw;
-            height: calc(100vh - 185px);
             color: #fff;
             animation: fade 1.5s ease;
+            display: flex;
+            flex-direction: column;
             .address_one {
                 animation: fade 2s ease;
-                font-size: 16px;
-                padding: 122px;
+                padding: 12.8%;
+                margin-bottom: 100px;
                 p {
+                    font-size: 16px;
                     font-weight: 700;
+                    font-family: "Montserrat", sans-serif;
                     span {
                         font-weight: normal;
                     }
                 }
             }
             .address_two {
+                margin-top: 100px;
                 text-align: right;
-                margin-top: 120px;
-                padding: 122px;
+                padding: 12.8%;
                 p {
                     font-size: 14px;
                     font-weight: lighter;
@@ -80,6 +88,9 @@
             .map {
                 width: 100vw;
                 height: 150px;
+                iframe {
+                    height: 150px;
+                }
             }
             .address {
                 background-color: #222;
@@ -136,6 +147,9 @@
             .map {
                 width: 100vw;
                 height: 150px;
+                iframe {
+                    height: 150px;
+                }
             }
             .address {
                 background-color: #222;
