--- a/src/components/SideMenu/SideMenu.scss
+++ b/src/components/SideMenu/SideMenu.scss
@@ -14,14 +14,15 @@
         display: flex;
         position: absolute;
         top: 22px;
-        right: -20px;
+        right: 0px;
+        left: -22px;
     }
 
     &-change-lang-menu {
         display: flex;
-        position: absolute;
+        position: fixed;
         top: 62px;
-        right: 25px;
+        right: 50px;
     }
 
     &-change-lang-menu-item {
@@ -96,7 +97,7 @@
     #side-menu-toggle {
         display: block;
         position: fixed;
-        top: 49px;
+        top: 50px;
         right: 100px;
 
         z-index: 1;
@@ -173,7 +174,6 @@
         position: fixed;
         display: flex;
         flex-direction: column;
-        overflow-y: scroll;
         right: 0;
         height: 100%;
         &::-webkit-scrollbar {
@@ -332,13 +332,13 @@
     }
     .title-list {
         margin-top: 23px;
-        min-height: 605px;
     }
 }
 
 @media screen and (min-width: 1024.1px) {
     .side-menu-container-change-lang-menu {
-        right: 18%;
+        position: fixed;
+        right: 100px;
     }
     #menu {
         width: 532px !important;
@@ -394,9 +394,8 @@
 @media (max-width: 781px) {
     .side-menu-container {
         #menu {
-            width: 60%;
+            width: 70%;
             padding-left: 30px;
-            padding-top: 200px;
             li {
                 font-size: 25px;
                 font-family: Montserrat-regular;
@@ -405,6 +404,9 @@
         #side-menu-toggle {
             top: 50px;
             right: 60px;
+        }
+        .title-list {
+            margin-top: 10px;
         }
         .info-wrapper {
             #address {
@@ -425,6 +427,9 @@
 }
 @media (max-width: 500px) {
     .side-menu-container {
+        #menu li {
+            padding: 5px 0;
+        }
         &-change-lang-menu-item.en {
             margin-right: 55px;
         }
@@ -585,6 +590,30 @@
         &-change-lang-wrapper {
             top: 10px;
         }
+        .info-wrapper p {
+            font-size: 13px;
+             line-height: unset;
+        }
+        .info-wrapper #address {
+            padding-bottom: 10px;
+        }
+        #menu {
+            padding-bottom: 10px;
+        }
+        .info-wrapper {
+            br {
+                display: none;
+            }
+            .link {
+                padding-bottom: 10px;
+            }
+        }
+    }
+    .side-menu-container .brochure-item a, .side-menu-container .proposal-item a {
+        color: #fff;
+        font-size: 13px;
+        margin-right: 8px;
+        display: inline;
     }
 }
 
