--- a/src/components/Pages/HomePage/FirstPage/firstPage.scss
+++ b/src/components/Pages/HomePage/FirstPage/firstPage.scss
@@ -19,13 +19,13 @@
         .inner-content {
             width: 100%;
             height: auto;
-            .background {
-                img {
-                    pointer-events: none;
+            .background-container {
+                .back {
+                    //pointer-events: none;
                     width: 100vw;
-                    height: 56.25vw; /* Given a 16:9 aspect ratio, 9/16*100 = 56.25 */
+                    height: 100vh;
                     min-height: 100vh;
-                    min-width: 177.77vh; /* Given a 16:9 aspect ratio, 16/9*100 = 177.77 */
+                    min-width: 177.77vh;
                     position: absolute;
                     top: 50%;
                     left: 50%;
@@ -46,29 +46,29 @@
                 width: 100%;
                 height: 100%;
                 .title {
-                    margin-top: 30px;
+                    top: 70px;
                     font-size: 95.5px;
                     font-weight: bold;
-                    line-height: 92px;
+                    line-height: 104.5px;
                     transition: all 0.2s;
                     position: relative;
+                    font-family: 'Roboto-Bold';
                 }
                 .subTitle {
-                    width: 29%;
-                    margin-top: 40px;
+                    top: 85px;
                     position: relative;
                     font-size: 20.5px;
                     font-weight: 300;
-                    line-height: 1.41;
+                    line-height: 29px;
                     color: #222;
                     white-space: pre-line;
                 }
                 .note {
-                    margin-top: 130px;
+                    top: 170px;
                     position: relative;
                     font-size: 20.5px;
                     font-weight: 300;
-                    line-height: 1.41;
+                    line-height: 29px;
                     color: #222;
                 }
 
@@ -78,13 +78,10 @@
                         .title {
                             font-size: 70px;
                             margin-top: 50px;
-                            line-height: 1.09;
-                        }
-                        .subTitle {
-                            width: 40%;
+                            line-height: 104.5px;
                         }
                         .note {
-                            width: 40%;
+                            width: 45%;
                         }
                     }
 
@@ -97,7 +94,10 @@
                         line-height: 1;
                     }
                     .subTitle, .note {
-                        width: 45%;
+                        font-size: 15px;
+                    }
+                    .note {
+                        width: 80%;
                     }
                 }
             }
@@ -108,7 +108,10 @@
                         line-height: 0.8;
                     }
                     .subTitle, .note {
-                        width: 65%;
+                        font-size: 14px;
+                    }
+                    .note {
+                        width: 50%;
                     }
                 }
             }
@@ -119,7 +122,7 @@
                         line-height: 0.8;
                     }
                     .subTitle, .note {
-                        width: 65%;
+                        font-size: 14px;
                     }
                 }
             }
@@ -129,21 +132,22 @@
                         font-size: 27px;
                         line-height: 0.8;
                     }
-                    .subTitle, .note {
-                        width: 65%;
-                    }
+                    //.subTitle, .note {
+                    //    width: 65%;
+                    //}
                 }
             }
             .content-container.en {
                 .subTitle,
                 .note {
-                    font-family: "Roboto Light", sans-serif;
+                    font-family: "Roboto-Light", sans-serif;
                 }
             }
             .content-container.ko {
                 .subTitle,
                 .note {
-                    font-family: noto-sans-cjk-kr, sans-serif;
+                    font-family: noto-sans-cjk-kr-light, sans-serif;
+
                 }
             }
         }
